// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render correctly 1`] = `
.c3 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c9 {
  box-sizing: border-box;
  margin-left: auto;
}

.c2 {
  box-sizing: border-box;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  border-color: #e0e0e0;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  overflow-y: auto;
  padding: 1rem;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  border-color: #e0e0e0;
  border-top: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin: 0;
  color: #373737;
  font-weight: bold;
  line-height: 1.5;
}

.c4 {
  font-size: 1.125rem;
}

.c0 {
  position: fixed;
  z-index: -1;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 10001;
  top: 50%;
  left: 50%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 90vh;
  border-radius: 0.25rem;
  background-color: #fff;
  box-shadow: 0 10px 30px 0 rgba(17,17,17,0.2);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 416px;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #373737;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c10:focus {
  outline: 0;
}

.c10:disabled,
.c10[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c10:disabled .c12 svg,
.c10[disabled] .c12 svg {
  fill: #8b8b8b;
}

.c10::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c10::before {
  border-color: #373737;
}

.c10 .c12 svg {
  fill: #bfbfbf;
}

.c10:hover {
  border-color: #6B88c5;
}

.c10:active {
  border-color: #3c5ad0;
  color: #3c5ad0;
}

.c10:active .c12 svg {
  fill: #3c5ad0;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  background-color: #3c5ad0;
  color: #ffffff;
  font-weight: bold;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  margin-left: 0.5rem;
}

.c11:focus {
  outline: 0;
}

.c11:disabled,
.c11[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c11:disabled .c12 svg,
.c11[disabled] .c12 svg {
  fill: #8b8b8b;
}

.c11::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c11 .c12 svg {
  fill: #ffffff;
}

.c11:hover {
  background-color: #516bd5;
}

.c11:active {
  background-color: #2f4dc3;
}

<body>
  <div />
  <div
    style="position: fixed; top: 0px; left: 0px; z-index: 9999;"
  >
    <div
      class="c0"
      style="opacity: 0;"
    />
    <div
      class="c1"
      style="opacity: 0;"
    >
      <div
        class="c2"
        px="3"
        py="2"
      >
        <div
          class="c3"
        >
          <h4
            class="c4 c5"
          />
        </div>
      </div>
      <div
        class="c6"
      />
      <div
        class="c7"
        px="3"
        py="2"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <button
              class="c10"
            >
              Cancel
            </button>
            <button
              class="c11"
              type="primary"
            >
              Confirm
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal should render with props closable 1`] = `
<body>
  <div
    style="position: fixed; top: 0px; left: 0px; z-index: 9999;"
  >
    .c0 {
  position: fixed;
  z-index: -1;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
}

<div
      class="c0"
      style="opacity: 0;"
    />
    .c2 {
  box-sizing: border-box;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

.c12 {
  box-sizing: border-box;
  margin-left: auto;
}

.c1 {
  box-sizing: border-box;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  border-color: #e0e0e0;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  overflow-y: auto;
  padding: 1rem;
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  box-sizing: border-box;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  border-color: #e0e0e0;
  border-top: 1px solid;
  border-color: #e0e0e0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  margin: 0;
  color: #373737;
  font-weight: bold;
  line-height: 1.5;
}

.c3 {
  font-size: 1.125rem;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  line-height: 1;
  cursor: default;
  margin-right: 0rem;
}

.c8 svg {
  fill: #8b8b8b;
  vertical-align: middle;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c8.c8.c8 svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  z-index: 10001;
  top: 50%;
  left: 50%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 90vh;
  border-radius: 0.25rem;
  background-color: #fff;
  box-shadow: 0 10px 30px 0 rgba(17,17,17,0.2);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 416px;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #373737;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c13:focus {
  outline: 0;
}

.c13:disabled,
.c13[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c13:disabled .c7 svg,
.c13[disabled] .c7 svg {
  fill: #8b8b8b;
}

.c13::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c13::before {
  border-color: #373737;
}

.c13 .c7 svg {
  fill: #bfbfbf;
}

.c13:hover {
  border-color: #6B88c5;
}

.c13:active {
  border-color: #3c5ad0;
  color: #3c5ad0;
}

.c13:active .c7 svg {
  fill: #3c5ad0;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 1rem;
  background-color: #3c5ad0;
  color: #ffffff;
  font-weight: bold;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  margin-left: 0.5rem;
}

.c14:focus {
  outline: 0;
}

.c14:disabled,
.c14[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c14:disabled .c7 svg,
.c14[disabled] .c7 svg {
  fill: #8b8b8b;
}

.c14::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c14 .c7 svg {
  fill: #ffffff;
}

.c14:hover {
  background-color: #516bd5;
}

.c14:active {
  background-color: #2f4dc3;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.5rem;
  border-color: transparent;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 999px;
  width: 2.25rem;
  height: 2.25rem;
  background-color: #e8ecf5;
  color: #6B88c5;
  font-weight: bold;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6:focus {
  outline: 0;
}

.c6:disabled,
.c6[disabled] {
  opacity: 0.85;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: default;
  pointer-events: none;
}

.c6:disabled .c7 svg,
.c6[disabled] .c7 svg {
  fill: #8b8b8b;
}

.c6::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6 .c7 svg {
  fill: #6B88c5;
}

.c6:hover {
  background-color: #fafbfd;
}

.c6:active {
  background-color: #d6dded;
}

.c5 {
  background: transparent;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.c5:hover {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

<div
      class="c0"
      style="opacity: 0;"
    >
      <div
        class="c1"
        px="3"
        py="2"
      >
        <div
          class="c2"
        >
          <h4
            class="c3 c4"
          />
        </div>
        <div
          class="c5"
        >
          <button
            class="c6"
            type="normal"
          >
            <i
              class="c7 c8"
              cursor="default"
              size="24"
              style="pointer-events: none;"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </i>
          </button>
        </div>
      </div>
      <div
        class="c9"
      />
      <div
        class="c10"
        px="3"
        py="2"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            <button
              class="c13"
            >
              Cancel
            </button>
            <button
              class="c14"
              type="primary"
            >
              Confirm
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
